test(lexer): enhance LexerTest with comprehensive tokenization tests
- Added tests for various tokenization scenarios in `LexerTest` class
- Implemented tests for operators, delimiters, keywords, and numbers
- Improved coverage for edge cases including whitespace handling and malformed inputs
- Ensured that all tokens are correctly recognized and errors are reported as expected

These enhancements improve the robustness of the lexer by validating its behavior across a wider range of inputs, ensuring that it correctly identifies tokens and handles errors gracefully. This addresses potential issues that could arise during parsing in real-world scenarios.